# syn-pg

./: .env.default  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py  connection_tester.py  data_generator.py  db.py  gpt.py  scheduler.py
syn-pg/: data_generator.py  scheduler.py
tests/: __init__.py  test_data_generator.py  test_db.py  test_gpt.py  test_scheduler.py
